--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <main>
         <h1>Welche Anrede soll ich auswählen?</h1>
         <p>
-            Na, Du bist nicht mit den zwei Anreden zufrieden in unserem Formular?
+            Na, Du bist nicht mit den zwei Anreden in unserem Formular zufrieden?
             Kein Problem! Dieser <del>Zufallsgenerator</del> <ins>wissenschaftlich geprüfte Algorithmus</ins> hilft Dir weniger zu denken
             und dich mehr in die Geschlechterbinarität einzufügen!
         </p>
